@startuml
skinparam classAttributeIconSize 0

class User {
    - id: UUID
    - keycloakId: String
    - name: String
    - email: String
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    + getTasks(): List<Task>
}

class Task {
    - id: UUID
    - userId: UUID
    - title: String
    - description: String
    - status: TaskStatus
    - priority: TaskPriority
    - dueDate: Date
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    + changeStatus(status: TaskStatus): void
    + setPriority(priority: TaskPriority): void
}

enum TaskStatus {
    todo
    in_progress
    done
}

enum TaskPriority {
    low
    medium
    high
}

class TaskFilters {
    - status: TaskStatus
    - priority: TaskPriority
}

class DashboardSummary {
    - todo: int
    - inProgress: int
    - done: int
    - total: int
}

User "1" -- "0..*" Task : posiada >
Task --> TaskStatus : ma status >
Task --> TaskPriority : ma priorytet >
TaskFilters ..> Task : filtruje >
DashboardSummary ..> Task : agreguje >

@enduml
